--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 <a href="https://mursor.ottiptv.cc/douyu/65574">斗鱼_Zippo</a>
+<br>
+<a href="https://mursor.ottiptv.cc/douyu/9116745">斗鱼_胖龙的小生活</a>
 </body>
 
 </html>
